# Dictivo

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  tsconfig.base.json  wrangler.api.jsonc
.github/workflows/: build-desktop.yml  release-desktop.yml
apps/api/: package.json  tsconfig.check.json  tsconfig.json  vitest.config.ts
apps/api/migrations/: 001_init.sql
apps/api/src/: config.ts  index.ts  worker.test.ts  worker.ts
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
apps/desktop/e2e/: advanced-override.spec.ts  app.spec.ts  fixtures.ts  onboarding.spec.ts  tier-cards.spec.ts  tier-switch.spec.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns  tray.rgba
apps/desktop/src-tauri/src/: companion_macos.rs  lib.rs  license.rs  main.rs  native_recorder.rs  private_fast.rs  storage.rs  updater.rs
apps/desktop/src-tauri/tests/: global_hotkey_probe.rs
apps/desktop/tests/: appStartup.test.tsx  cloudFastEngine.test.ts  companion.test.ts  companionWindow.test.tsx  componentsInteraction.test.tsx  componentsStatic.test.tsx  deepLink.test.ts  desktopBridge.test.ts  docsConsistency.test.ts  export.test.ts  hotkeys.test.ts  localDictationEngine.test.ts  localPolish.test.ts  mediaCapture.test.ts  modelManagerInteraction.test.tsx  onboardingWizard.test.tsx  privacySettings.test.ts  releaseWorkflow.test.ts  settingsInteraction.test.tsx  settingsStore.test.ts  sounds.test.ts  tierSelector.test.tsx  uiSemantics.test.ts  version.test.ts  wireframeVisual.test.ts
docs/: README.es.md  README.ja.md  README.zh-CN.md  cloud-fast-deploy.md  dictivo-topdown-review-report.md  github-docs-research.md  goal-dictivo-review.md  native-manual-test-plan.md  test-matrix.md  windows-parity-audit.md  windows-parity-test-plan.md
docs/handoff/: HANDOFF.md
docs/release/: SETUP.md  launch-checklist.md  plan.md  sqlite-migration-plan.md  versioning.md
docs/release/_v1-reference/: README.md  blockers.md  ci-release-pipeline.md  eula-and-privacy.md  license-architecture.md  model-cdn.md  pricing-copy.md  renewal-flow.md  strategy.md  updater-integration.md
docs/release/launch/: README.md  product-hunt-kit.md  show-hn.md  where-your-data-lives.md
docs/superpowers/plans/: 2026-05-12-local-engine-tier-cards.md  2026-05-12-stitch-style-redesign.md  2026-05-12-ui-redesign-and-hardware-aware-tiering.md
docs/superpowers/specs/: 2026-05-12-local-engine-tier-cards-design.md  2026-05-12-stitch-style-redesign-design.md  2026-05-12-ui-redesign-and-hardware-aware-tiering-design.md
marketing/: .gitignore  package-lock.json  package.json  tsconfig.json
marketing/public/data/: transcript.json
marketing/scripts/: capture-ui.mjs  record-dictation.sh
marketing/src/: DictivoDemo.tsx  Root.tsx  theme.ts
marketing/src/components/: Icons.tsx
scripts/: prepare-private-fast-engine.mjs  setup-private-fast.sh  smoke-private-fast.mjs  windows-parity-smoke.ps1
site/: README.md  _headers  eula.html  index.html  latest.json  privacy.html  style.css
(+45 files in other folders)
