[package]
name = "dictivo"
version = "0.2.0"
description = "Local-first desktop dictation"
authors = ["Dictivo"]
edition = "2021"

[lib]
name = "dictivo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6"
base64 = "0.22"
dirs = "6"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
thiserror = "2"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
global-hotkey = "0.7"
