[package]
name = "dictivo"
version = "0.2.1"
description = "Local-first desktop dictation"
authors = ["Dictivo"]
edition = "2021"

[lib]
name = "dictivo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3.6"
base64 = "0.22"
dirs = "6"
fs2 = "0.4"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-deep-link = "2"
tokio = { version = "1", features = ["time", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[dev-dependencies]
global-hotkey = "0.7"
